cleanup, can't upload model- too big file

--- a/dermModelFrontend/src/app/pages/signup-page/signup-page.component.html
+++ b/dermModelFrontend/src/app/pages/signup-page/signup-page.component.html
@@ -47,4 +47,9 @@
       </p>
     </div>
   </div>
+  <div class="toast toast-top toast-center" *ngIf="showSuccess">
+    <div class="alert alert-success">
+      <span>Account created successfully! Redirecting to login...</span>
+    </div>
+  </div>
 </div>
